test/parser/compile_error/main_test.mj
program main_test
{
    int main() { }
    void main(int a) { }
}